--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,10 +73,10 @@ code, kbd, tt, var {
 
 img { height: auto; max-width: 100%; }
 
-ul, ol { margin: 0 0 1.5em 3em; }
+ul, ol { margin: 0 0 1.5em 1.5em; }
 ul { list-style: disc; }
 ol { list-style: decimal; }
-li > ul, li > ol { margin-bottom: 0; margin-left: 40px; }
+li > ul, li > ol { margin-bottom: 0; margin-left: 1.5em; }
 
 hr { background-color: #ccc; border: 0; height: 1px; margin-bottom: 1.5em; }
 
