Add headshot to sidebar, reduce title font size

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header class="site-header">
   <div class="site-branding">
+    <img class="site-avatar" src="{{ '/assets/images/external/wordpress/2018/12/IMG_-b8cpdw.jpg' | relative_url }}" alt="{{ site.title }}">
     <h1 class="site-title"><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
   </div>
   <button class="menu-toggle" aria-controls="primary-menu" aria-expanded="false">Menu</button>
